<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:padding="24dp"
            android:background="@android:color/holo_blue_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:text="@string/BOOKDETILS"
                android:textSize="18sp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pop_book"
                android:layout_below="@+id/title"
                android:hint="@string/smallbookname"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pop_author"
                android:layout_below="@+id/pop_book"
                android:hint="@string/smallenter_the_name_of_item"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pop_stock"
                android:inputType="number"
                android:layout_below="@+id/pop_author"
                android:hint="@string/enter_the_qtysmall"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pop_stock"
                android:id="@+id/savebutton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/savebutton"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>