<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textsure"
                android:textSize="18sp"
                android:text="@string/ask"
                android:layout_centerHorizontal="true"
                android:padding="6dp"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:id="@+id/conf_no"
                android:text="@string/checkno"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_alignParentEnd="true"
                android:background="@color/colorAccent"
                android:id="@+id/conf_yes"
                android:text="@string/checkyes"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>