<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:padding="24dp"
            android:background="#FFEB3B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/return_title"
                android:layout_centerHorizontal="true"
                android:text="@string/returntitle"
                android:textSize="18sp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/return_id"
                android:inputType="number"
                android:layout_below="@+id/return_title"
                android:hint="@string/return_name"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/return_id"
                android:id="@+id/return_btn1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/issue_save"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>